# ontomics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC2.md  build.rs  dist-workspace.toml  glama.json  install.sh  server.json
.claude/: settings.local.json
.github/workflows/: build-setup.yml  release.yml
benchmarks/: embedding-model-comparison.md  v0.3.0-release-notes.md
doc/: integrations.md
doc/benchmarks/: concepts-scribbleprompt.md  transform-voxelmorph.md
pi/extensions/: index.ts
src/: analyzer.rs  cache.rs  centrality.rs  cluster.rs  config.rs  diff.rs  domain_pack.rs  embeddings.rs  enrichment.rs  entity.rs  graph.rs  lib.rs  logic.rs  lsp.rs  main.rs  ontology_md.rs  parser.rs  pipeline.rs  pseudocode.rs  resolve.rs  tokenizer.rs  tools.rs  types.rs
src/graph/: cluster.rs  diag.rs  file.rs  logic.rs  mod.rs  naming.rs  query.rs  trace.rs
tests/: embedding_benchmark.rs  l4_tests.rs  testbed.rs
tests/testbed/: codebases.rs  expectations.rs  universal.rs
