[package]
name = "ontomics"
version = "0.1.16"
edition = "2021"
description = "MCP server that extracts domain ontologies from Python codebases"
license = "MIT"
repository = "https://github.com/EtienneChollet/ontomics"
homepage = "https://github.com/EtienneChollet/ontomics"
readme = "README.md"

[features]
lsp = []

[dependencies]
# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"

# Embeddings
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.5"
tokenizers = "0.22"

# MCP server
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# File watching
notify = "7"

# Configuration
toml = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File walking (respects .gitignore)
ignore = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
