[package]
name = "ontomics"
version = "0.2.9"
edition = "2021"
description = "MCP server that extracts domain ontologies from Python codebases"
license = "MIT"
repository = "https://github.com/EtienneChollet/ontomics"
homepage = "https://github.com/EtienneChollet/ontomics"
readme = "README.md"

[features]
lsp = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]

[dependencies]
# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"

# Embeddings
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "tokio", "ureq"] }
tokenizers = "0.22"

# MCP server
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# File watching
notify = "7"

# Configuration
toml = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1"

# Graph algorithms
petgraph = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File walking (respects .gitignore)
ignore = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# cargo-release: sync server.json version on release
[package.metadata.release]
pre-release-replacements = [
  { file = "server.json", search = "\"version\": \"[0-9]+\\.[0-9]+\\.[0-9]+\"", replace = "\"version\": \"{{version}}\"" },
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
